[tool.poetry]
name = "aiocrossrefapi"
version = "1.6.0"
description = "Library that implements the endpoints of the Crossref API asynclery"
authors = ["Fabio Batalha <fabio.batalha@erudit.org>"]
readme = "README.rst"
packages = [
  { include = "aiocrossref",  from="."}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
urllib3 = "1.26.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.277"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
